<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SendFileActivity"
    android:id="@+id/activity_send_file"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/file_name"
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/a_file_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>


    <me.zhouzhuo.zzhorizontalprogressbar.ZzHorizontalProgressBar
        android:id="@+id/a_file_progress"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:zpb_padding="0dp"
        app:zpb_pb_color="@color/tab_indicator_text"
        app:zpb_bg_color="@color/baseLine"
        app:zpb_max="1000"
        app:zpb_progress="0" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:gravity="end">
        <TextView
            android:id="@+id/a_file_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="15dp"
        android:layout_marginStart="10dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/module_velocity"
            android:layout_gravity="center_vertical"/>

        <TextView
            android:id="@+id/a_file_velocity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/zero" />
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:gravity="end"
            android:layout_marginEnd="15dp"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/a_file_select"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="7dp"
                android:paddingBottom="7dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/button_back"
                android:text="@string/select_file" />



            <TextView
                android:id="@+id/a_file_send"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="7dp"
                android:paddingBottom="7dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/button_back"
                android:text="@string/send_file" />
        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/a_file_callback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="invisible"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        tools:ignore="UseCompoundDrawables">
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/file_back"
            android:contentDescription="@string/app_name" />
        <TextView
            android:id="@+id/a_file_path"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/a_file_select_velocity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="10dp"
        android:paddingEnd="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:text="@string/select_velocity"/>
        <LinearLayout
            android:id="@+id/a_file_velocity_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:orientation="horizontal">
            <com.hc.mixthebluetooth.customView.CheckBoxSample
               android:id="@+id/a_file_velocity_1_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                app:color_background="@color/skyBlue"
                app:color_border="@color/skyBlue"
                app:size="16dp" />
            <TextView
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/normal_speed"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/a_file_velocity_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:orientation="horizontal">
            <com.hc.mixthebluetooth.customView.CheckBoxSample
                android:id="@+id/a_file_velocity_2_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                app:color_background="@color/skyBlue"
                app:color_border="@color/skyBlue"
                app:size="16dp" />
            <TextView
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/height_speed"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/a_file_velocity_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:orientation="horizontal">
            <com.hc.mixthebluetooth.customView.CheckBoxSample
                android:id="@+id/a_file_velocity_3_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                app:color_background="@color/skyBlue"
                app:color_border="@color/skyBlue"
                app:size="16dp" />
            <TextView
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/super_height_speed"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/a_file_velocity_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:orientation="horizontal">
            <com.hc.mixthebluetooth.customView.CheckBoxSample
                android:id="@+id/a_file_velocity_4_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                app:color_background="@color/skyBlue"
                app:color_border="@color/skyBlue"
                app:size="16dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/max_height_speed"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/a_file_velocity_5_linear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:orientation="horizontal">
            <com.hc.mixthebluetooth.customView.CheckBoxSample
                android:id="@+id/a_file_velocity_5_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                app:color_background="@color/skyBlue"
                app:color_border="@color/skyBlue"
                app:size="16dp" />
            <TextView
                android:id="@+id/a_file_velocity_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/custom_speed"/>
            <TextView
                android:id="@+id/a_file_velocity_set"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/set"
                android:textColor="#86CDE6"/>
        </LinearLayout>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/a_file_list"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

    </androidx.recyclerview.widget.RecyclerView>

</LinearLayout>