<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:weightSum="10"
    android:gravity="center">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="7"
        android:orientation="vertical"
        android:background="@drawable/window_back">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/hint_window_title"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="13dp"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:text="@string/hint"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:background="@drawable/window_back"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
                android:paddingRight="15dp"
                android:paddingLeft="15dp"
                android:textSize="16sp"
                android:text="@string/hint_hid_reminder"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/hint_hc_t"
                android:contentDescription="@string/hint" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="5dp"
                android:gravity="end"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/hint_hid_no_show_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="5dp"
                    android:paddingStart="15dp"
                    android:text="@string/hint_hid_no_hint"/>

                <com.hc.mixthebluetooth.customView.CheckBoxSample
                    android:id="@+id/hint_hid_no_show"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    app:color_background="@color/green"
                    app:color_border="@color/green"
                    app:size="16dp" />

                <View
                    android:layout_width="20dp"
                    android:layout_height="0dp" />
            </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/baseLine"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/hint_hid_right"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="12dp"
                    android:background="@drawable/cancel_back_off"
                    android:textColor="@color/red"
                    android:text="@string/hint_hid_right"
                    android:textSize="16sp"
                    android:layout_weight="1"/>
                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/baseLine"/>
                <TextView
                    android:id="@+id/hint_hid_download"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:padding="12dp"
                    android:gravity="center"
                    android:background="@drawable/affirm_back_off"
                    android:text="@string/hint_hid_download"
                    android:textSize="16sp"
                    android:textColor="@color/green"
                    android:layout_weight="1"/>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>



</LinearLayout>
